--- a/src/components/EmailForm/EmailForm.pcss
+++ b/src/components/EmailForm/EmailForm.pcss
@@ -35,12 +35,8 @@
   }
 
   &__form-content {
-    bottom: var(--email-form-padding);
     box-sizing: border-box;
-    left: var(--email-form-padding);
-    position: absolute;
-    right: var(--email-form-padding);
-    top: 80px;
+    padding: var(--email-form-padding);
   }
 
   & > * {
@@ -113,15 +109,9 @@
   }
 
   &__button-wrapper {
-    background: transparent;
-    bottom: 0 !important;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    left: 0;
-    min-height: calc(var(--gap) * 28);
-    position: absolute;
-    right: 0;
   }
 
   &__button-wrapper--empty {
